include $(top_srcdir)/config/automake.common

docdir = $(datadir)/doc/jpg
doc_DATA = \
./xmdump.jpg\
./medconforme.jpg\
./medimport.jpg\
./xmdump1.jpg\
./xmdump2.jpg\
./xmdump3.jpg\
./xmdump4.jpg

EXTRA_DIST = \
./xmdump.jpg\
./medconforme.jpg\
./medimport.jpg\
./xmdump1.jpg\
./xmdump2.jpg\
./xmdump3.jpg\
./xmdump4.jpg
