include $(top_srcdir)/config/automake.common

docdir = $(datadir)/doc/png
doc_DATA = \
./med.png\
./types_de_base.png\
./etude.png\
./maillage.png\
./dependances_sous_packages_maillage.png\
./noeud.png\
./maille.png\
./maille_0D.png\
./maille_1D.png\
./maille_2D.png\
./maille_3D.png\
./face.png\
./arete.png\
./famille.png\
./equivalence.png\
./valeur_sur_entite.png\
./sequence_de_calcul.png\
./resultat.png\
./profil.png\
./classe.png\
./variable_scalaire_numerique.png\
./evolution_temporelle.png\
./indexation_grille.png\
./exemple_grille_cartesienne.png\
./numerotation_grille.png\
./exemple_numerotation_grille.png\
./exemple_grille_cartesienne_coordonnees.png\
./points_de_gauss_par_element.png\
./association.png\
./agregation.png\
./composition.png\
./heritage.png\
./package.png\
./code.png\
./MED_fichier.png\
./chainage.png\
./exemple_connectivite_polygones.png\
./exemple_gro2fam.png\
./exemple_connectivite_descendante_polyedres.png\
./exemple_connectivite_nodale_polyedres.png\
./joint.png\
./description-joint.png\
./sous-domaines.png\
./temp-vitesse.png

EXTRA_DIST = \
./med.png\
./types_de_base.png\
./etude.png\
./maillage.png\
./dependances_sous_packages_maillage.png\
./noeud.png\
./maille.png\
./maille_0D.png\
./maille_1D.png\
./maille_2D.png\
./maille_3D.png\
./face.png\
./arete.png\
./famille.png\
./equivalence.png\
./valeur_sur_entite.png\
./sequence_de_calcul.png\
./resultat.png\
./profil.png\
./classe.png\
./variable_scalaire_numerique.png\
./evolution_temporelle.png\
./indexation_grille.png\
./exemple_grille_cartesienne.png\
./numerotation_grille.png\
./exemple_numerotation_grille.png\
./exemple_grille_cartesienne_coordonnees.png\
./points_de_gauss_par_element.png\
./association.png\
./agregation.png\
./composition.png\
./heritage.png\
./package.png\
./code.png\
./MED_fichier.png\
./chainage.png\
./exemple_connectivite_polygones.png\
./exemple_gro2fam.png\
./exemple_connectivite_descendante_polyedres.png\
./exemple_connectivite_nodale_polyedres.png\
./joint.png\
./description-joint.png\
./sous-domaines.png\
./temp-vitesse.png


