INCLUDE_DIRECTORIES(
  ${HDF5_INCLUDE_DIRS}
  ${MPI_INCLUDE_DIRS}
  ${PROJECT_BINARY_DIR}/include
  ${PROJECT_SOURCE_DIR}/include
)

SET(mdump_SOURCES 
  mdump.c 
  MED23meshIterators.c 
  MED23fieldIterators.c
  )
  
SET(mdump_SOURCES 
  mdump3.c 
  MED23meshIterators.c 
  MED23fieldIterators.c
 )

ADD_EXECUTABLE(mdump ${mdump_SOURCES})
TARGET_LINK_LIBRARIES(mdump ${MEDFILE_ENGINE_LIB})

ADD_EXECUTABLE(mdump3 ${mdump_SOURCES})
TARGET_LINK_LIBRARIES(mdump3 ${MEDFILE_ENGINE_LIB})

INSTALL(TARGETS mdump DESTINATION bin)
INSTALL(TARGETS mdump3 DESTINATION bin)

# Configure and install xmdump

SET(prefix ${CMAKE_INSTALL_PREFIX})
CONFIGURE_FILE(xmdump2.in ${PROJECT_BINARY_DIR}/xmdump2 @ONLY)
CONFIGURE_FILE(xmdump3.in ${PROJECT_BINARY_DIR}/xmdump3 @ONLY)

INSTALL(PROGRAMS ${PROJECT_BINARY_DIR}/xmdump2 ${PROJECT_BINARY_DIR}/xmdump3 DESTINATION bin)
